# SkyPrompt

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake  version.rc.in
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
cmake/ports/clib-utils-qtr/: portfile.cmake  vcpkg.json
cmake/ports/imgui/: vcpkg.json
cmake/ports/skyprompt-addon/: portfile.cmake  vcpkg.json
cmake/ports/skyprompt-api/: portfile.cmake
include/: API.h  BoundingBox.hpp  Geometry.h  Hooks.h  Input.h  Interaction.h  Logger.h  MCP.h  PCH.h  Renderer.h  Service.h  Settings.h  Tasker.h  Theme.h  Tutorial.h  Utils.h
include/PapyrusAPI/: Bindings.cpp  Bindings.h  Keycodes.txt  Sinks.cpp  Sinks.h  SkyPrompt.psc  SkyPromptTestScript.psc
src/: Geometry.cpp  Hooks.cpp  Input.cpp  MCP.cpp  Renderer.cpp  Service.cpp  Settings.cpp  Tasker.cpp  Theme.cpp  Tutorial.cpp  Utils.cpp  plugin.cpp
src/ImGui/: Graphics.cpp  Graphics.h  IconsFonts.cpp  IconsFonts.h  Styles.cpp  Styles.h
